# inferencing-sdk-cpp

./: .clang-format  .clang-format-ignore  .gitignore  .mbedignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Kconfig  LICENSE  LICENSE.3-clause-bsd-clear  README.md  component.mk  create-arduino-library.sh  idf_component.yml  sources.txt  utensor.lib
.github/workflows/: upload_component.yml  upload_component_staging.yml
CMSIS-DSP/: based-off.txt
CMSIS/DSP/Include/: arm_math.h
CMSIS/DSP/Include/dsp/: none.h
CMSIS/DSP/Source/BasicMathFunctions/: arm_abs_f16.c  arm_abs_f32.c  arm_abs_q15.c  arm_abs_q31.c  arm_abs_q7.c  arm_add_f16.c  arm_add_f32.c  arm_add_q15.c  arm_add_q31.c  arm_add_q7.c  arm_and_u16.c  arm_and_u32.c  arm_and_u8.c  arm_clip_f16.c  arm_clip_f32.c  arm_clip_q15.c  arm_clip_q31.c  arm_clip_q7.c  arm_dot_prod_f16.c  arm_dot_prod_f32.c  arm_dot_prod_q15.c  arm_dot_prod_q31.c  arm_dot_prod_q7.c  arm_mult_f16.c  arm_mult_f32.c  arm_mult_q15.c  arm_mult_q31.c  arm_mult_q7.c  arm_negate_f16.c  arm_negate_f32.c  arm_negate_q15.c  arm_negate_q31.c  arm_negate_q7.c  arm_not_u16.c  (+26 more)
anomaly/: anomaly.h
classifier/: ei_aligned_malloc.h  ei_classifier_config.h  ei_classifier_smooth.h  ei_classifier_types.h  ei_constants.h  ei_fill_result_struct.h  ei_model_types.h  ei_nms.h  ei_performance_calibration.h  ei_print_results.h  ei_quantize.h  ei_run_classifier.h  ei_run_classifier_c.cpp  ei_run_classifier_c.h  ei_run_classifier_image.h  ei_run_dsp.h  ei_signal_with_axes.h  ei_signal_with_range.h
classifier/inferencing_engines/: akida.h  anomaly.h  aton.h  ceva_npn.h  drpai.h  engines.h  ethos_linux.h  memryx.h  nordic_axon.h  onnx_tidl.h  tensaiflow.h  tensorrt.h  tflite_eon.h  tflite_full.h  tflite_helper.h  tflite_micro.h  tflite_tidl.h  vlm_connector.h
classifier/postprocessing/: ei_object_counting.h  ei_object_tracking.h  ei_performance_calibration.h  ei_postprocessing.h  ei_postprocessing_ai_hub.h  ei_postprocessing_common.h  ei_postprocessing_thresholds.h  ei_postprocessing_types.h
classifier/postprocessing/alignment/: ei_alignment.hpp  rectangular_lsap.hpp
cmake/zephyr/: CMakeLists.txt
dsp/: config.hpp  ei_alloc.h  ei_dsp_handle.h  ei_eeg.hpp  ei_flatten.h  ei_hr.hpp  ei_profiler.h  ei_utils.h  ei_vector.h  memory.cpp  memory.hpp  numpy.hpp  numpy_types.h  returntypes.h  returntypes.hpp
dsp/dct/: fast-dct-fft.cpp
dsp/dsp_engines/: ei_arm_cmsis_dsp.h  ei_ceva_dsp.h  ei_ceva_dsp_fixed.h  ei_cmsis_numpy.hpp  ei_esp_dsp.h  ei_no_hw_dsp.h
dsp/dsp_engines/ceva/: ceva_dsp_lib_fft.h  ceva_typedef.h
dsp/image/: image.hpp  processing.cpp  processing.hpp
dsp/spectral/: feature.hpp  filters.hpp  fir_filter.hpp  processing.hpp  signal.hpp  spectral.hpp  wavelet.hpp  wavelet_coeff.hpp
dsp/speechpy/: feature.hpp  functions.hpp  processing.hpp  speechpy.hpp
examples/hello-world/: CMakeLists.txt  README.md  build.out  diagram.json  sdkconfig.defaults  sdkconfig.wokwi  wokwi.toml
examples/hello-world-img/: CMakeLists.txt  README.md  diagram.json  partitions.csv  sdkconfig.defaults  sdkconfig.esp32s3  sdkconfig.wokwi  wokwi.toml
examples/hello-world-img/main/: CMakeLists.txt  main.cpp  offline_sample.h
examples/hello-world-img/main/model-parameters/: model_metadata.h  model_variables.h
examples/hello-world-img/main/tflite-model/: tflite_learn_904830_19_compiled.h
examples/hello-world-img/tflite-model/: trained_model_ops_define.h
examples/hello-world/main/: CMakeLists.txt  main.cpp  offline_audio_sample.h
examples/hello-world/model-parameters/: model_metadata.h  model_variables.h
examples/hello-world/tflite-model/: tflite_learn_44_13_compiled.h
porting/: ei_classifier_porting.h  ei_logging.h
porting/ambiq/: debug_log.cpp  ei_classifier_porting.cpp
porting/android/: ei_classifier_porting.cpp
porting/arduino/: ei_classifier_porting.cpp
porting/brickml/: debug_log.cpp  ei_classifier_porting.cpp
porting/ceva-npn/: debug_log.cpp
porting/clib/: debug_log.cpp  ei_classifier_porting.cpp
porting/cy8ckit-062-ble/: debug_log.cpp  ei_classifier_porting.cpp  timer.h
porting/ecm3532/: debug_log.cpp  ei_classifier_porting.cpp
porting/espressif/: debug_log.cpp  ei_classifier_porting.cpp
porting/ethos-core-driver/: CMakeLists.txt  README.MD  version.txt
porting/ethos-core-driver/include/: ethosu_types.h
porting/ethos-core-driver/src/: ethosu_config_u85.h  ethosu_driver.c
porting/ethos-u-driver-stack-imx/: README.md  SCR.txt
porting/himax/: debug_log.cpp  ei_classifier_porting.cpp
porting/himax-we2/: debug_log.cpp  ei_classifier_porting.cpp
porting/iar/: ei_classifier_porting.cpp
porting/infineon-psoc62/: ei_classifier_porting.cpp
porting/mbed/: debug_log.cc  debug_log.cpp  ei_classifier_porting.cpp
porting/mingw32/: debug_log.cpp  ei_classifier_porting.cpp
porting/particle/: debug_log.cpp
porting/posix/: debug_log.cc  debug_log.cpp  ei_classifier_porting.cpp
porting/raspberry/: debug_log.cpp  ei_classifier_porting.cpp
porting/silabs/: debug_log.cpp  ei_classifier_porting.cpp
porting/sony/: debug_log.cpp  ei_classifier_porting.cpp
porting/stm32-cubeai/: debug_log.cc  debug_log.cpp  ei_classifier_porting.cpp
porting/synaptics/: debug_log.cpp  ei_classifier_porting.cpp
porting/ti/: debug_log.cpp  ei_classifier_porting.cpp
porting/zephyr/: debug_log.cpp  ei_classifier_porting.cpp
src/edge-impulse-sdk/classifier/: ei_aligned_malloc.h  ei_classifier_types.h  ei_data_normalization.h  ei_nms.h  ei_print_results.h  ei_run_dsp.h  ei_signal_with_axes.h
src/edge-impulse-sdk/cmake/: add_source.cmake
src/edge-impulse-sdk/dsp/: config.hpp  ei_alloc.h  ei_flatten.h  ei_hr.hpp  ei_utils.h  ei_vector.h  memory.cpp  numpy_types.h
src/edge-impulse-sdk/porting/: ei_classifier_porting.h
tensorflow/lite/kernels/: op_macros.h
tensorflow/lite/micro/: all_ops_resolver.cc  debug_log.h  micro_allocator.cc  micro_log.h  micro_mutable_op_resolver.h  micro_time.cc  tensor_utils_common.cc
tests/: test_invariant_ei_postprocessing_common.h
utensor/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
(+569 files in other folders)
